libs/preprocessor/tests/errors/pe5_define_multitoken_argument/source.hpp
#define HI(var1 var2) Hello var1 var2
